tests/NormalTests/paczka1/fuzzy1/49954939.err
Error in line 5: PmGiKUEwG S94 82,0
Error in line 6: PmGiKUEwG S88 90,9
Error in line 17: d88v28x S88 24,5
Error in line 25: d88v28x S94 61,9
Error in line 30: d88v28x S45 0,0
Error in line 34: IHSElLcetl S45 54,94
